--- a/frontend/templates/study_tracker.html
+++ b/frontend/templates/study_tracker.html
@@ -539,6 +539,8 @@
         <div class="datetime" id="datetime">Loading...</div>
     </div>
     
+    {% include '_sliderbar.html' %}
+    
     <div class="main-content">
         <div id="priorityContainer" class="priority-section">
             <h2>Priority</h2>
