--- a/frontend/templates/task_tracker.html
+++ b/frontend/templates/task_tracker.html
@@ -483,6 +483,7 @@
         <div class="logo">Task Tracker</div>
         <div class="datetime" id="datetime">Loading...</div>
     </div>
+    {% include '_sliderbar.html' %}
     
     <div class="main-content">
         <div id="priorityContainer" class="priority-section" style="display: none;">
